src/snapshots/geometrid__polyomino__tests__T pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
    Vector8 {
        x: -1,
        y: -1,
    },
    Vector8 {
        x: 2,
        y: -1,
    },
    Vector8 {
        x: 2,
        y: 0,
    },
    Vector8 {
        x: 1,
        y: 0,
    },
    Vector8 {
        x: 1,
        y: 2,
    },
    Vector8 {
        x: 0,
        y: 2,
    },
    Vector8 {
        x: 0,
        y: 0,
    },
    Vector8 {
        x: -1,
        y: 0,
    },
]
