src/snapshots/geometrid__polyomino__tests__V pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
  {
    "x": -2,
    "y": 0
  },
  {
    "x": 0,
    "y": 0
  },
  {
    "x": 0,
    "y": -2
  },
  {
    "x": 1,
    "y": -2
  },
  {
    "x": 1,
    "y": 1
  },
  {
    "x": -2,
    "y": 1
  }
]
